@@ -1,3 +1,8 @@
+2016-06-08 Albert Chu <chu11@llnl.gov>
+
+	* libfreeipmi/include/freeipmi/spec/ipmi-comp-code-spec.h: Fix
+	invalid completion code values for set session privilege macros.
+
 2016-06-06 Albert Chu <chu11@llnl.gov>
 
 	* ipmiconsole/ipmiconsole-argp.c, man/ipmiconsole.8.pre.in:
